Improved contrast styling for displayed loadouts and fixed logic to prevent creating without name or weapons

--- a/public/styles.css
+++ b/public/styles.css
@@ -1141,11 +1141,13 @@ p.sign-up-text a:hover {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        background-color: var(--text-color);
+        background-color: #f5f5f5;
         padding: 10px;
         margin-top: 10px;
+        border: 1px solid var(--text-color);
         border-radius: 4px;
-        width: 100%; /* Adjust width as needed */
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1); /* Add a soft shadow */
+        width: 100%;
         height: 110px;
       }
     
@@ -1159,7 +1161,7 @@ p.sign-up-text a:hover {
       }
       
       .loadout-title {
-        color: white;
+        color: var(--text-color);
         font-weight: bold;
         flex-basis: 250px;
         text-align: left;
@@ -1169,7 +1171,7 @@ p.sign-up-text a:hover {
       .weapon-class {
         font-size: 16px;
         font-weight: bold;
-        color: #ddd;
+        color: var(--text-color);
         margin-bottom: 50px;
         margin-left: -50px;
         margin-top: 0px;
